--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• This update improves the layout of media messages with quoted replies, and also fixes a visual gap that appeared between the search bar and your chat list when the "Reduce Transparency" iOS Accessibility setting was enabled.
+• Tato aktualizace zlepšuje rozložení multimediálních zpráv s citovanými odpověďmi a také opravuje vizuální mezeru, která se mohla objevit mezi vyhledávacím panelem a seznamem chatů.
