--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• This update improves the layout of media messages with quoted replies, and also fixes a visual gap that appeared between the search bar and your chat list when the "Reduce Transparency" iOS Accessibility setting was enabled.
+• इस अपडेट से, क्वोट किए गए जवाबों की मदद से मीडिया संदेशों के लेआउट में सुधार होता है। साथ ही, "पारदर्शिता कम करें" iOS एक्सेसिबिलिटी सेटिंग चालू करने पर, सर्च बार और आपकी चैट सूची के बीच में दिखाई देने वाला विज़ुअल गैप भी ठीक होता है।
