--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,1 +1,1 @@
-• This update improves the layout of media messages with quoted replies, and also fixes a visual gap that appeared between the search bar and your chat list when the "Reduce Transparency" iOS Accessibility setting was enabled.
+• 今回のアップデートでは、引用返信を含むメディアメッセージのレイアウトを改善したほか、検索バーとチャットリストの間に見られた隙間を修正しました。
