--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,1 @@
-• This update improves the layout of media messages with quoted replies, and also fixes a visual gap that appeared between the search bar and your chat list when the "Reduce Transparency" iOS Accessibility setting was enabled.
+• Denne oppdateringen sikrer bedre layout for meldinger med mediefiler og siterte svar, og den fjerner det ekstra tomrommet mellom søkefeltet og samtalelisten inne på Signal.
