--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,1 @@
-• This update improves the layout of media messages with quoted replies, and also fixes a visual gap that appeared between the search bar and your chat list when the "Reduce Transparency" iOS Accessibility setting was enabled.
+• 此更新改善了包含引用回覆的媒體訊息版面，還修正了在啟用 iOS 輔助使用設定的「減少透明度」時，搜尋欄與聊天清單之間出現的視覺差距。
